--- a/notebooks/bn-corpus-prothom-alo-2022.ipynb
+++ b/notebooks/bn-corpus-prothom-alo-2022.ipynb
@@ -25,31 +25,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting banglanews\r\n",
-      "  Downloading banglanews-0.0.2-py3-none-any.whl (5.6 kB)\r\n",
-      "Installing collected packages: banglanews\r\n",
-      "Successfully installed banglanews-0.0.2\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
-      "\u001b[0mCollecting bnunicodenormalizer\r\n",
-      "  Downloading bnunicodenormalizer-0.1.1.tar.gz (38 kB)\r\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25hBuilding wheels for collected packages: bnunicodenormalizer\r\n",
-      "  Building wheel for bnunicodenormalizer (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for bnunicodenormalizer: filename=bnunicodenormalizer-0.1.1-py3-none-any.whl size=21913 sha256=076e87ccff15e38b923e00b088541b829b2686d6939d325f790183bd377d4d54\r\n",
-      "  Stored in directory: /root/.cache/pip/wheels/a2/4f/12/67639dde670a3ccd1edcb84d712bb73eb734f822a365109af4\r\n",
-      "Successfully built bnunicodenormalizer\r\n",
-      "Installing collected packages: bnunicodenormalizer\r\n",
-      "Successfully installed bnunicodenormalizer-0.1.1\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
-      "\u001b[0mRequirement already satisfied: pandarallel in /opt/conda/lib/python3.7/site-packages (1.6.3)\r\n",
-      "Requirement already satisfied: psutil in /opt/conda/lib/python3.7/site-packages (from pandarallel) (5.9.1)\r\n",
-      "Requirement already satisfied: pandas>=1 in /opt/conda/lib/python3.7/site-packages (from pandarallel) (1.3.5)\r\n",
-      "Requirement already satisfied: dill>=0.3.1 in /opt/conda/lib/python3.7/site-packages (from pandarallel) (0.3.5.1)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1->pandarallel) (2.8.2)\r\n",
-      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1->pandarallel) (2022.1)\r\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1->pandarallel) (1.21.6)\r\n",
-      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas>=1->pandarallel) (1.15.0)\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
+      "Collecting banglanews\n",
+      "  Downloading banglanews-0.0.2-py3-none-any.whl (5.6 kB)\n",
+      "Installing collected packages: banglanews\n",
+      "Successfully installed banglanews-0.0.2\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mCollecting bnunicodenormalizer\n",
+      "  Downloading bnunicodenormalizer-0.1.1.tar.gz (38 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: bnunicodenormalizer\n",
+      "  Building wheel for bnunicodenormalizer (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for bnunicodenormalizer: filename=bnunicodenormalizer-0.1.1-py3-none-any.whl size=21913 sha256=076e87ccff15e38b923e00b088541b829b2686d6939d325f790183bd377d4d54\n",
+      "  Stored in directory: /root/.cache/pip/wheels/a2/4f/12/67639dde670a3ccd1edcb84d712bb73eb734f822a365109af4\n",
+      "Successfully built bnunicodenormalizer\n",
+      "Installing collected packages: bnunicodenormalizer\n",
+      "Successfully installed bnunicodenormalizer-0.1.1\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: pandarallel in /opt/conda/lib/python3.7/site-packages (1.6.3)\n",
+      "Requirement already satisfied: psutil in /opt/conda/lib/python3.7/site-packages (from pandarallel) (5.9.1)\n",
+      "Requirement already satisfied: pandas>=1 in /opt/conda/lib/python3.7/site-packages (from pandarallel) (1.3.5)\n",
+      "Requirement already satisfied: dill>=0.3.1 in /opt/conda/lib/python3.7/site-packages (from pandarallel) (0.3.5.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1->pandarallel) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1->pandarallel) (2022.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.7/site-packages (from pandas>=1->pandarallel) (1.21.6)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas>=1->pandarallel) (1.15.0)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
@@ -944,7 +944,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -958,7 +958,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.4"
   },
   "papermill": {
    "default_parameters": {},
