--- a/notebooks/bangla-frequency-dictionary-prothom-alo.ipynb
+++ b/notebooks/bangla-frequency-dictionary-prothom-alo.ipynb
@@ -52,43 +52,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting symspellpy\r\n",
-      "  Downloading symspellpy-6.7.7-py3-none-any.whl (2.6 MB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/2.6 MB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hCollecting editdistpy>=0.1.3\r\n",
-      "  Downloading editdistpy-0.1.3-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (125 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.5/125.5 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hInstalling collected packages: editdistpy, symspellpy\r\n",
-      "Successfully installed editdistpy-0.1.3 symspellpy-6.7.7\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
-      "\u001b[0mCollecting fasttext-langdetect\r\n",
-      "  Downloading fasttext-langdetect-1.0.3.tar.gz (6.6 kB)\r\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25hRequirement already satisfied: fasttext>=0.9.1 in /opt/conda/lib/python3.7/site-packages (from fasttext-langdetect) (0.9.2)\r\n",
-      "Requirement already satisfied: pybind11>=2.2 in /opt/conda/lib/python3.7/site-packages (from fasttext>=0.9.1->fasttext-langdetect) (2.10.0)\r\n",
-      "Requirement already satisfied: setuptools>=0.7.0 in /opt/conda/lib/python3.7/site-packages (from fasttext>=0.9.1->fasttext-langdetect) (59.8.0)\r\n",
-      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from fasttext>=0.9.1->fasttext-langdetect) (1.21.6)\r\n",
-      "Building wheels for collected packages: fasttext-langdetect\r\n",
-      "  Building wheel for fasttext-langdetect (setup.py) ... \u001b[?25l-\b \b\\\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for fasttext-langdetect: filename=fasttext_langdetect-1.0.3-py3-none-any.whl size=6548 sha256=91d1603335ef4092dfd72da08df83b463c291ee2d6836d6c4e27af16b8bbaa8c\r\n",
-      "  Stored in directory: /root/.cache/pip/wheels/7d/cb/96/0fb678c75ebffce072159f58d3895245e048e41a4741d4382c\r\n",
-      "Successfully built fasttext-langdetect\r\n",
-      "Installing collected packages: fasttext-langdetect\r\n",
-      "Successfully installed fasttext-langdetect-1.0.3\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
-      "\u001b[0mCollecting wordfreq\r\n",
-      "  Downloading wordfreq-3.0.3-py3-none-any.whl (56.8 MB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.8/56.8 MB\u001b[0m \u001b[31m16.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hRequirement already satisfied: langcodes>=3.0 in /opt/conda/lib/python3.7/site-packages (from wordfreq) (3.3.0)\r\n",
-      "Collecting ftfy>=6.1\r\n",
-      "  Downloading ftfy-6.1.1-py3-none-any.whl (53 kB)\r\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.1/53.1 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\r\n",
-      "\u001b[?25hRequirement already satisfied: regex>=2021.7.6 in /opt/conda/lib/python3.7/site-packages (from wordfreq) (2021.11.10)\r\n",
-      "Requirement already satisfied: msgpack>=1.0 in /opt/conda/lib/python3.7/site-packages (from wordfreq) (1.0.4)\r\n",
-      "Requirement already satisfied: wcwidth>=0.2.5 in /opt/conda/lib/python3.7/site-packages (from ftfy>=6.1->wordfreq) (0.2.5)\r\n",
-      "Installing collected packages: ftfy, wordfreq\r\n",
-      "Successfully installed ftfy-6.1.1 wordfreq-3.0.3\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
+      "Collecting symspellpy\n",
+      "  Downloading symspellpy-6.7.7-py3-none-any.whl (2.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.6/2.6 MB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting editdistpy>=0.1.3\n",
+      "  Downloading editdistpy-0.1.3-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (125 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m125.5/125.5 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: editdistpy, symspellpy\n",
+      "Successfully installed editdistpy-0.1.3 symspellpy-6.7.7\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mCollecting fasttext-langdetect\n",
+      "  Downloading fasttext-langdetect-1.0.3.tar.gz (6.6 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: fasttext>=0.9.1 in /opt/conda/lib/python3.7/site-packages (from fasttext-langdetect) (0.9.2)\n",
+      "Requirement already satisfied: pybind11>=2.2 in /opt/conda/lib/python3.7/site-packages (from fasttext>=0.9.1->fasttext-langdetect) (2.10.0)\n",
+      "Requirement already satisfied: setuptools>=0.7.0 in /opt/conda/lib/python3.7/site-packages (from fasttext>=0.9.1->fasttext-langdetect) (59.8.0)\n",
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.7/site-packages (from fasttext>=0.9.1->fasttext-langdetect) (1.21.6)\n",
+      "Building wheels for collected packages: fasttext-langdetect\n",
+      "  Building wheel for fasttext-langdetect (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for fasttext-langdetect: filename=fasttext_langdetect-1.0.3-py3-none-any.whl size=6548 sha256=91d1603335ef4092dfd72da08df83b463c291ee2d6836d6c4e27af16b8bbaa8c\n",
+      "  Stored in directory: /root/.cache/pip/wheels/7d/cb/96/0fb678c75ebffce072159f58d3895245e048e41a4741d4382c\n",
+      "Successfully built fasttext-langdetect\n",
+      "Installing collected packages: fasttext-langdetect\n",
+      "Successfully installed fasttext-langdetect-1.0.3\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0mCollecting wordfreq\n",
+      "  Downloading wordfreq-3.0.3-py3-none-any.whl (56.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.8/56.8 MB\u001b[0m \u001b[31m16.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: langcodes>=3.0 in /opt/conda/lib/python3.7/site-packages (from wordfreq) (3.3.0)\n",
+      "Collecting ftfy>=6.1\n",
+      "  Downloading ftfy-6.1.1-py3-none-any.whl (53 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m53.1/53.1 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: regex>=2021.7.6 in /opt/conda/lib/python3.7/site-packages (from wordfreq) (2021.11.10)\n",
+      "Requirement already satisfied: msgpack>=1.0 in /opt/conda/lib/python3.7/site-packages (from wordfreq) (1.0.4)\n",
+      "Requirement already satisfied: wcwidth>=0.2.5 in /opt/conda/lib/python3.7/site-packages (from ftfy>=6.1->wordfreq) (0.2.5)\n",
+      "Installing collected packages: ftfy, wordfreq\n",
+      "Successfully installed ftfy-6.1.1 wordfreq-3.0.3\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
@@ -124,17 +124,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting wget\r\n",
-      "  Downloading wget-3.2.zip (10 kB)\r\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25hBuilding wheels for collected packages: wget\r\n",
-      "  Building wheel for wget (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9675 sha256=103ad0d7af1a8b9e12071d1a6f29c1952cb0806d2690dc031ba91f5076f7a05f\r\n",
-      "  Stored in directory: /root/.cache/pip/wheels/a1/b6/7c/0e63e34eb06634181c63adacca38b79ff8f35c37e3c13e3c02\r\n",
-      "Successfully built wget\r\n",
-      "Installing collected packages: wget\r\n",
-      "Successfully installed wget-3.2\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
+      "Collecting wget\n",
+      "  Downloading wget-3.2.zip (10 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: wget\n",
+      "  Building wheel for wget (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for wget: filename=wget-3.2-py3-none-any.whl size=9675 sha256=103ad0d7af1a8b9e12071d1a6f29c1952cb0806d2690dc031ba91f5076f7a05f\n",
+      "  Stored in directory: /root/.cache/pip/wheels/a1/b6/7c/0e63e34eb06634181c63adacca38b79ff8f35c37e3c13e3c02\n",
+      "Successfully built wget\n",
+      "Installing collected packages: wget\n",
+      "Successfully installed wget-3.2\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
@@ -168,17 +168,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting bnunicodenormalizer\r\n",
-      "  Downloading bnunicodenormalizer-0.1.1.tar.gz (38 kB)\r\n",
-      "  Preparing metadata (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25hBuilding wheels for collected packages: bnunicodenormalizer\r\n",
-      "  Building wheel for bnunicodenormalizer (setup.py) ... \u001b[?25l-\b \bdone\r\n",
-      "\u001b[?25h  Created wheel for bnunicodenormalizer: filename=bnunicodenormalizer-0.1.1-py3-none-any.whl size=21913 sha256=cb0e9d91d8e111980a5c4d88c42a94d8ad17bf1b9dc786b63e454d8603ccddc0\r\n",
-      "  Stored in directory: /root/.cache/pip/wheels/a2/4f/12/67639dde670a3ccd1edcb84d712bb73eb734f822a365109af4\r\n",
-      "Successfully built bnunicodenormalizer\r\n",
-      "Installing collected packages: bnunicodenormalizer\r\n",
-      "Successfully installed bnunicodenormalizer-0.1.1\r\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\r\n",
+      "Collecting bnunicodenormalizer\n",
+      "  Downloading bnunicodenormalizer-0.1.1.tar.gz (38 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: bnunicodenormalizer\n",
+      "  Building wheel for bnunicodenormalizer (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for bnunicodenormalizer: filename=bnunicodenormalizer-0.1.1-py3-none-any.whl size=21913 sha256=cb0e9d91d8e111980a5c4d88c42a94d8ad17bf1b9dc786b63e454d8603ccddc0\n",
+      "  Stored in directory: /root/.cache/pip/wheels/a2/4f/12/67639dde670a3ccd1edcb84d712bb73eb734f822a365109af4\n",
+      "Successfully built bnunicodenormalizer\n",
+      "Installing collected packages: bnunicodenormalizer\n",
+      "Successfully installed bnunicodenormalizer-0.1.1\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
@@ -339,17 +339,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-12-01 22:58:16--  https://raw.githubusercontent.com/hermitdave/FrequencyWords/master/content/2018/bn/bn_full.txt\r\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\r\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\r\n",
-      "HTTP request sent, awaiting response... 200 OK\r\n",
-      "Length: 2352582 (2.2M) [text/plain]\r\n",
-      "Saving to: ‘bn_full.txt’\r\n",
-      "\r\n",
-      "bn_full.txt         100%[===================>]   2.24M  --.-KB/s    in 0.02s   \r\n",
-      "\r\n",
-      "2022-12-01 22:58:16 (92.5 MB/s) - ‘bn_full.txt’ saved [2352582/2352582]\r\n",
-      "\r\n"
+      "--2022-12-01 22:58:16--  https://raw.githubusercontent.com/hermitdave/FrequencyWords/master/content/2018/bn/bn_full.txt\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 2352582 (2.2M) [text/plain]\n",
+      "Saving to: ‘bn_full.txt’\n",
+      "\n",
+      "bn_full.txt         100%[===================>]   2.24M  --.-KB/s    in 0.02s   \n",
+      "\n",
+      "2022-12-01 22:58:16 (92.5 MB/s) - ‘bn_full.txt’ saved [2352582/2352582]\n",
+      "\n"
      ]
     }
    ],
@@ -1280,7 +1280,7 @@
     "\n",
     "sym_spell = SymSpell()\n",
     "\n",
-    "sym_spell.load_dictionary('freq.txt', 0, 1)\n",
+    "sym_spell.load_dictionary('prothom_alo_word_freq.txt', 0, 1)\n",
     "\n",
     "# Print out first 5 elements to demonstrate that dictionary is\n",
     "# successfully loaded\n",
@@ -1307,7 +1307,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1321,7 +1321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.4"
   },
   "papermill": {
    "default_parameters": {},
