Bert_custom_data

--- a/bert_corrector/custom_data_for_bert.ipynb
+++ b/bert_corrector/custom_data_for_bert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d91894e2-77ae-42fa-a293-fcce486570b5",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,7 @@
     "import warnings\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
+    "from random import random, choice\n",
     "from tqdm import tqdm  \n",
     "from pandarallel import pandarallel\n",
     "\n",
@@ -198,11 +199,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b73717df-9564-4a0e-99fd-d618bc897754",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_prothom_alo = pd.read_csv('custom_data_for_bert.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f48d09a-c018-42d8-a604-83465c567edc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def error_chooser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a7b7a147-bfc7-413c-9c8b-8bd00842b317",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>lena</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>চাঁপাইনবাবগঞ্জে মহানন্দা ও পুনর্ভবা নদীর দখল হ...</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>তাঁর বলে উইকেটের পেছনে টম বান্ডেলকে ক্যাচ দেন</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>তাঁর বইয়ের সংগ্রহ ঈর্ষণীয়</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>রোগী অজ্ঞান হলে বা স্ট্রোকের সঙ্গে অন্যান্য রো...</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>মোটাদাগে প্রবাসী ও চাকরিজীবীরা বৈদেশিক মুদ্রা ...</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>এখানে প্রার্থী তিনজন</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>পানি ও রুম হিটার ব্যবহার করছে</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>নারীপুরুষ সবার জন্যই আছে</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>নিজেই নিজেকে বলে রহিমা বিবি</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>আবুল মাল আবদুল মুহিত বলেন</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                sentence  lena\n",
+       "0      চাঁপাইনবাবগঞ্জে মহানন্দা ও পুনর্ভবা নদীর দখল হ...    10\n",
+       "1          তাঁর বলে উইকেটের পেছনে টম বান্ডেলকে ক্যাচ দেন     8\n",
+       "2                              তাঁর বইয়ের সংগ্রহ ঈর্ষণীয়     4\n",
+       "3      রোগী অজ্ঞান হলে বা স্ট্রোকের সঙ্গে অন্যান্য রো...    11\n",
+       "4      মোটাদাগে প্রবাসী ও চাকরিজীবীরা বৈদেশিক মুদ্রা ...     8\n",
+       "...                                                  ...   ...\n",
+       "99995                               এখানে প্রার্থী তিনজন     3\n",
+       "99996                      পানি ও রুম হিটার ব্যবহার করছে     6\n",
+       "99997                           নারীপুরুষ সবার জন্যই আছে     4\n",
+       "99998                        নিজেই নিজেকে বলে রহিমা বিবি     5\n",
+       "99999                          আবুল মাল আবদুল মুহিত বলেন     5\n",
+       "\n",
+       "[100000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prothom_alo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c2efbc07-2871-4e97-9436-c0593ab70b94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "character = ['অ','আ','ই','ঈ','উ','ঊ','এ','ঐ','ও','ঔ','ঋ','ঃ','ং','ৎ'\n",
+    "             'ক','খ','গ','ঘ','ঙ','চ', 'ছ','য','জ', 'ঝ','ট','ঠ','ড','র','ড়','ঢ়',\n",
+    "             'ণ','ত','থ','দ','ধ','ন','প','ফ','ব','ভ','ম','স','শ','ষ','য়','হ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "13dc94d2-0746-43a4-8a90-2b68e1ec9259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "JuktakkhorList = [' ক্ট ' , ' ক্ক ' , ' ক্ত ' , ' ক্য ' , ' ক্র ' , ' ক্ল ' , ' ক্ষ ' , ' ক্ষ্ণ ' , ' ক্ষ্ম ' , ' ক্ষ্য ' , ' ক্স ' , ' খ্র ' , ' গ্ধ ' , ' গ্ধ্য ' , ' গ্ন ' , ' গ্ন্য ' , ' গ্ব ' , ' গ্র ' , ' গ্র্য ' , ' গ্ল ' , ' ঘ্ন ' , ' ঘ্র ' , ' ঙ্ক্য ' , ' ঙ্গ্য ' , ' চ্চ ' , ' চ্ছ্ব ' , ' চ্য ' , ' জ্জ ' , ' জ্জ্ব ' , ' ট্ট ' , ' জ্ব ' , ' জ্য ' , ' জ্র ' , ' ট্য ' , ' ট্র ' , ' ড্ড ' , ' ড্র ' , ' ণ্ট ' , ' ণ্ঠ ' , ' ণ্ড ' , ' ণ্ণ ' , ' ণ্য ' , ' ৎক ' , ' ৎখ ' , ' ত্ত ' , ' ত্ত্ব ' , ' ত্ত্য ' , ' ত্ন ' , ' ৎপ ' , ' ত্ব ' , ' ত্ম ' , ' ত্ম্য ' , ' ত্য ' , ' ত্র ' , ' ত্র্য ' , ' ৎস ' , ' দ্ঘ ' , ' দ্দ ' , ' দ্ধ ' , ' দ্ব ' , ' দ্ভ ' , ' দ্ভ্র ' , ' দ্ম ' , ' দ্য ' , ' দ্র ' , ' দ্র্য ' , ' ধ্ব ' , ' ধ্য ' , ' ধ্র ' , ' ন্ট ' , ' ন্ট্র ' , ' ন্ঠ ' , ' ন্ড ' , ' ন্ড্র ' , ' ন্ত ' , ' ন্ত্ব ' , ' ন্ত্য ' , ' ন্ত্র ' , ' ন্ত্র্য ' , ' ন্থ ' , ' ন্দ ' , ' ন্দ্ব ' , ' ন্দ্র ' , ' ন্ধ ' , ' ন্ন ' , ' ন্য ' , ' প্ট ' , ' প্ত ' , ' প্ন ' , ' প্প ' , ' প্য ' , ' ব্দ ' , ' ব্ধ ' , ' ব্ব ' , ' ব্র ' , ' ভ্য ' , ' ভ্র ' , ' ম্প্র ' , ' ম্ব ' , ' ম্ম ' , ' ম্য ' , ' ম্র ' , ' য্য ' , ' র্ক ' , ' র্গ্য ' , ' র্ঘ্য ' , ' র্জ্য ' , ' র্থ্য ' , ' র্ব্য ' , ' র্খ ' , ' র্গ ' , ' র্ঘ ' , ' র্চ ' , ' র্ছ ' , ' র্জ ' , ' র্ঝ ' , ' র্ট ' , ' র্ড ' , ' র্ণ ' , ' র্ত ' , ' র্থ ' , ' র্দ ' , ' র্দ্ব ' , ' র্দ্র ' , ' র্ধ ' , ' র্ধ্ব ' , ' ল্ট ' , ' ল্ড ' , ' ল্প ' , ' ল্ম ' , ' ল্য ' , ' ল্ল ' , ' শ্ছ ' , ' শ্ন ' , ' শ্ব ' , ' শ্র ' , ' শ্ল ' , ' ষ্ক ' , ' ষ্ক্র ' , ' ষ্ট ' , ' ষ্ট্য ' , ' ষ্ট্র ' , ' ষ্ঠ ' , ' ষ্প ' , ' স্ট ' , ' স্ট্র ' , ' স্ত্র ' , ' স্ত ' , ' স্থ্য ' , ' স্য ' , ' স্র ' , ' স্ল ' , ' হ্র ' , ' হ্ল ' , ' গ্ম ' , ' ম্ভ ' , ' স্ম ' , ' ঙ্ঘ ' , ' ঙ্ক্ষ ' , ' ঙ্খ ' , ' ঙ্ক ' , ' ঙ্‌ক্ত ' , ' ঞ্চ ' , ' ঞ্ছ ' , ' ঞ্জ ' , ' হ্ন ' , ' ঙ্গ ' , ' জ্ঞ ' , ' গ্য ' , ' চ্ছ '] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e37ad755-8cb9-4950-820c-f7158f7091db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ReplaceDict = {\n",
+    "      'ক' : ['ল','য'],\n",
+    "      'খ' : ['কগ','কজ','লহ','ঝ'],\n",
+    "      'গ' : ['ফ','হ'],\n",
+    "      'ঘ' : ['ফগ','হজ'],\n",
+    "      'ঙ' : ['ব','ম'],\n",
+    "      'চ' : ['ভ','চজ','চগ','ভহ'],\n",
+    "      'ছ' : ['ভ','চজ','চগ','ভহ'],\n",
+    "      'জ' : ['ক','হ'],\n",
+    "      'ঝ' : ['কজ','হগ'],\n",
+    "      'ট' : ['র'],\n",
+    "      'ঠ' : ['তজ','তগ','রহ'],\n",
+    "      'ড' : ['স','ফ'],\n",
+    "      'ঢ' : ['দজ','দ্গ','শ','ফহ'],\n",
+    "      'ণ' : ['ব','ম'],\n",
+    "      'ত' : ['র'],\n",
+    "      'থ' : ['তজ', 'তগ', 'রহ'],\n",
+    "      'দ' : ['স', 'ফ'],\n",
+    "      'ধ' : ['দজ', 'দ্গ', 'শ' ,'ফহ'],\n",
+    "      'ন' : ['ব','ম'],\n",
+    "      'প' : ['ও',' ো'],\n",
+    "      'ফ' : ['দ','গ'],\n",
+    "      'ব' : ['ভ','ন'],\n",
+    "      'ভ' : ['‍ব','চ'],\n",
+    "      'ম' : ['ন'],\n",
+    "      'য' : ['হ','ক'],\n",
+    "      'র' : ['এ',' ে','ত'],\n",
+    "      'ল' : ['ক'],\n",
+    "      'শ' : ['সজ','সগ','আহ','ঢ'],\n",
+    "      'ষ' : ['সজ','সগ','আহ','ঢ'],\n",
+    "      'স' : ['আ',' া','দ'],\n",
+    "      'হ' : ['গ','য'],\n",
+    "      'য়' : ['ত','উ','ু'],\n",
+    "      'ড়' : ['এ',' ে','ত'],\n",
+    "      'ঢ়' : ['এ',' ে','ত'],\n",
+    "      'ৎ' : ['র'],\n",
+    "      'ং' : ['ব','ম'],\n",
+    "      'ঃ' : ['গ','য'],\n",
+    "      'অ' : ['প',' ি','ই'],\n",
+    "      'আ' : ['স'],\n",
+    "      'ই' : ['উ','অ'],\n",
+    "      'ঈ' : ['উ','অ'],\n",
+    "      'উ' : ['ই',' ি'],\n",
+    "      'ঊ' : ['ই',' ি'],\n",
+    "      'ঋ' : [''],\n",
+    "      'এ' : ['ও','র'],\n",
+    "      'ঐ' : [''],\n",
+    "      'ও' : ['প','ই'],\n",
+    "      'ঔ' : [''],\n",
+    "      'া' : ['স'],\n",
+    "      'ি' : ['উ','অ'],\n",
+    "      'ো' : ['প',' ি'],\n",
+    "      'ৌ' : [''],\n",
+    "      'ে' : ['ো','র'],\n",
+    "      'ৈ' : ['']\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5a6f056c-8b73-4220-a047-8327d53fea1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SameClusterDict = {\n",
+    "    'অ' : ['ও','আ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    'আ' : ['আ','অ্যাঁ','আঃ','ওয়া','এ'],\n",
+    "    'ই':['ই','ঈ','এ','ে','য়'],\n",
+    "    'ঈ':['ই','ঈ','এ','ে','য়'],\n",
+    "    'উ' : ['উ''উঁ','ঊ','ু'],\n",
+    "    'ঊ' : ['উ''উঁ','ঊ','ু'],\n",
+    "    'ঋ' : ['রি','হ্রী','ড়ি','ঢ়ি','ব্রই','ৃ','হ্র'],\n",
+    "    'এ' : ['এ','অ্যা','আঃ'],\n",
+    "    'ঐ': ['অই','ঈ','ওই' , 'ই', 'অ্যাই'],\n",
+    "    'ও': ['ও','আ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    'ঔ': [ 'ও','আ','অউ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    'ক': ['ক','খ','গ', 'ও','আ','অ্যা','া','ওঁ','ওঃ','কোঁ',' কো','খ','খো','খও','ক্ষও','কহোঁ','কহও','গোঁ','গয়' ],\n",
+    "    'খ': ['ক','খ','গ', 'ও','আ','অ্যা','া','ওঁ','ওঃ','কোঁ',' কো','খ','খো','খও','ক্ষও','কহোঁ','কহও','গোঁ','গয়' ],\n",
+    "    'গ': ['ক','খ','গ', 'ও','আ','অ্যা','া','ওঁ','ওঃ','কোঁ',' কো','খ','খো','খও','ক্ষও','কহোঁ','কহও','গোঁ','গয়' ],\n",
+    "    'ঘ ': ['খ','খো','খও','ক্ষও','কহোঁ','কহও','গোঁ','গয়' ,'ঘো ','ঘও'],\n",
+    "    'ঙ': ['◌ং','ও','আ','অ্যা','া','ওঁ','ওঃ','অং'],\n",
+    "    'চ': ['চ','ও','আ','অ্যা','া','ওঁ','ওঃ','চোঁ','চও','ছোঁ','ছো','ছও','ছ'],\n",
+    "    'ছ': ['চ','ও','আ','অ্যা','া','ওঁ','ওঃ','চোঁ','চও','ছোঁ','ছো','ছও','ছ'],\n",
+    "    'জ': ['জ','য','জো','যো','ঝ','ঝও'],\n",
+    "    'ঝ': ['জ','য','জো','যো','ঝ','ঝও'],\n",
+    "    'ঞ': ['ন','ঙ','ণ','ঞ','ই','ঈ','এ','ে','য়','নও' ],\n",
+    "    'ট' : ['ত','তঁ','তোঁ','টয়','তো','ট'],\n",
+    "    'ঠ' : ['থ','ত','তঁ','তোঁ','টয়','তো','ট'],\n",
+    "    'ড' : ['দ','দো','দ্য','ডঃ' ,'দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'ঢ': ['দ','দো','দ্য','ডঃ','দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'ণ': ['ন','ঙ','ণ','ঞ','ই','ঈ','এ','ে','য়','নও' ],\n",
+    "    'ত' : ['দ','দো','দ্য','ডঃ' ,'দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'থ': ['দ','দো','দ্য','ডঃ' ,'দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'দ' : ['দ','দো','দ্য','ডঃ' ,'দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'ধ' : ['দ','দো','দ্য','ডঃ' ,'দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'ন': ['ন','ঙ','ণ','ঞ','ই','ঈ','এ','ে','য়','নও' ],\n",
+    "    'প' : ['প','ফ','ব','ভ','ম','ব্য', 'ভঁ', 'বও' ,'বো','বোঁ','ব্যয়','পঅ' ,'পো' ,'পয়' ,'পোঁ','ভঁ' ,'ভঅ' ,'ভয়','ভোঁ','ময়' ,'মোঃ'],\n",
+    "    'ফ' : ['প','ফ','ব','ভ','ম','ব্য', 'ভঁ', 'বও' ,'বো','বোঁ','ব্যয়','পঅ' ,'পো' ,'পয়' ,'পোঁ','ভঁ' ,'ভঅ' ,'ভয়','ভোঁ','ময়' ,'মোঃ'],\n",
+    "    'ব' : ['প','ফ','ব','ভ','ম','ব্য', 'ভঁ', 'বও' ,'বো','বোঁ','ব্যয়','পঅ' ,'পো' ,'পয়' ,'পোঁ','ভঁ' ,'ভঅ' ,'ভয়','ভোঁ','ময়' ,'মোঃ'],\n",
+    "    'ভ' : ['প','ফ','ব','ভ','ম','ব্য', 'ভঁ', 'বও' ,'বো','বোঁ','ব্যয়','পঅ' ,'পো' ,'পয়' ,'পোঁ','ভঁ' ,'ভঅ' ,'ভয়','ভোঁ','ময়' ,'মোঃ'],\n",
+    "    'ম' : ['প','ফ','ব','ভ','ম','ব্য', 'ভঁ', 'বও' ,'বো','বোঁ','ব্যয়','পঅ' ,'পো' ,'পয়' ,'পোঁ','ভঁ' ,'ভঅ' ,'ভয়','ভোঁ','ময়' ,'মোঃ'],\n",
+    "    'য' : ['প','ফ','ব','ভ','ম','ব্য', 'ভঁ', 'বও' ,'বো','বোঁ','ব্যয়','পঅ' ,'পো' ,'পয়' ,'পোঁ','ভঁ' ,'ভঅ' ,'ভয়','ভোঁ','ময়' ,'মোঃ'],\n",
+    "    'র' : ['র','ড়','ঢ়','রও','রোঁ','রো','রয়','ঋ', 'হর'  ],\n",
+    "    'ল' : ['ল','লয়','লো'],\n",
+    "    'শ' : ['শ','ষ','স','ও','আ','অ্যা','া','ওঁ','ওঃ','শো','সঅ','শয়'],\n",
+    "    'ষ' : ['শ','ষ','স','ও','আ','অ্যা','া','ওঁ','ওঃ','শো','সঅ','শয়'],\n",
+    "    'স' : ['শ','ষ','স','ও','আ','অ্যা','া','ওঁ','ওঃ','শো','সঅ','শয়'],\n",
+    "    '‍হ': ['হ','ও','আ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    'ড়' : ['র','ড়','ঢ়','রও','রোঁ','রো','রয়','ঋ', 'হর'  ],\n",
+    "    '‍ঢ়': ['র','ড়','ঢ়','রও','রোঁ','রো','রয়','ঋ', 'হর'  ],\n",
+    "    '‍য় ': ['ই','ঈ','এ','ে','য়'],\n",
+    "\n",
+    "    'ৎ' : ['দ','দো','দ্য','ডঃ' ,'দ্যো','ঢ','ধ','থ','ত','তঁ','তোঁ','টয়','তো','ট','ঢো','দঃ' ],\n",
+    "    'ং' : ['◌ং','ও','আ','অ্যা','া','ওঁ','ওঃ','অং'],\n",
+    "    'ঃ': ['হ','ও','আ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    '‍ঁ' : [''],\n",
+    "\n",
+    "    '‍ি': ['ই','ঈ','এ','ে','য়'],\n",
+    "    'ী' : ['ই','ঈ','এ','ে','য়'],\n",
+    "    'ে':['এ','অ্যা','আঃ'],\n",
+    "    'ৈ'  :['এ','অ্যা','আঃ'],\n",
+    "    'ো' : ['ও','আ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    'ৌ':['ও','আ','অ্যা','া','ওঁ','ওঃ'],\n",
+    "    'ৃ' : ['রি','হ্রী','ড়ি','ঢ়ি','ব্রই','ৃ','হ্র'],\n",
+    "     '◌ূ'  : ['উ''উঁ','ঊ','ু'],\n",
+    "     ' ু'  : ['উ''উঁ','ঊ','ু']\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6116786-a4a5-46f3-bfbe-1bb1accc851e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_methods = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6b10b73-b096-443e-ba20-c9a0ed294705",
+   "metadata": {},
+   "source": [
+    "1. single spell error\n",
+    "2. phonetically similar error\n",
+    "3. jukto okkhor error\n",
+    "4. multiple error\n",
+    "5. random noise\n",
+    "6. percentage error\n",
+    "7. deletion\n",
+    "8. insertion"
+   ]
   }
  ],
  "metadata": {
